# otus_cpp_homework-08

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
source/: CMakeLists.txt  bayan.cpp  bayan.h  filecomparator.cpp  filecomparator.h  main.cpp  options.cpp  options.h
tests/: CMakeLists.txt  test_bayan.cpp  test_params.cpp
